--- a/news-media.html
+++ b/news-media.html
@@ -431,7 +431,7 @@
 
     
 
-      <a href="https://fmg.org.mx/joshua-hong-y-regina-roldan-triunfan-en-la-ii-copa-sur-en-puebla/" target="_blank" style="text-decoration: none; color: inherit;">
+     <a href="https://fmg.org.mx/joshua-hong-y-regina-roldan-triunfan-en-la-ii-copa-sur-en-puebla/" target="_blank" style="text-decoration: none; color: inherit;">
         <div style="display: flex; align-items: center; border: 1px solid #e2e8f0; border-radius: 12px; padding: 15px; background: #ffffff; box-shadow: 0 2px 8px rgba(0,0,0,0.02); transition: all 0.2s;">
           <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: #f8fafc; width: 40px; height: 40px; border-radius: 10px;">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -441,10 +441,13 @@
             </svg>
           </div>
           <div style="flex-grow: 1;">
-            <div style="display: flex; align-items: center; gap: 6px; margin-bottom: 4px;">
-              <span style="font-size: 10px; color: #15803d; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">FMG Official</span>
-              <span style="width: 3px; height: 3px; background: #cbd5e1; border-radius: 50%;"></span>
-              <span style="font-size: 10px; color: #64748b; font-weight: 600;">News Archive</span>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 4px;">
+              <div style="display: flex; align-items: center; gap: 6px;">
+                <span style="font-size: 10px; color: #15803d; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">FMG Official</span>
+                <span style="width: 3px; height: 3px; background: #cbd5e1; border-radius: 50%;"></span>
+                <span style="font-size: 10px; color: #64748b; font-weight: 600;">News Archive</span>
+              </div>
+              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Jan 20, 2025</span>
             </div>
             <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.4;">
               Joshua Hong y Regina Roldán triunfan en la II Copa Sur en Puebla
@@ -469,9 +472,12 @@
             </svg>
           </div>
           <div style="flex-grow: 1;">
-            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-              <span style="font-size: 9px; color: #ffffff; background: #15803d; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">FMG Official</span>
-              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">World Cup News</span>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;">
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <span style="font-size: 9px; color: #ffffff; background: #15803d; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">FMG Official</span>
+                <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">World Cup News</span>
+              </div>
+              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Jun 20, 2024</span>
             </div>
             <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
               Joshua Hong destaca en el <span style="color: #806600;">Toyota Junior Golf World Cup</span>
@@ -492,9 +498,12 @@
             </svg>
           </div>
           <div style="flex-grow: 1;">
-            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-              <span style="font-size: 9px; color: #ffffff; background: #15803d; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">FMG Official</span>
-              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Championship News</span>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;">
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <span style="font-size: 9px; color: #ffffff; background: #15803d; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">FMG Official</span>
+                <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Championship News</span>
+              </div>
+              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Apr 14, 2024</span>
             </div>
             <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
               Hong y Lavalle se <span style="color: #15803d;">coronan</span> en el Nacional de Parejas
@@ -516,9 +525,12 @@
             </svg>
           </div>
           <div style="flex-grow: 1;">
-            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-              <span style="font-size: 9px; color: #ffffff; background: #15803d; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">FMG Official</span>
-              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Tournament Victory</span>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;">
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <span style="font-size: 9px; color: #ffffff; background: #15803d; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">FMG Official</span>
+                <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Tournament Victory</span>
+              </div>
+              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Mar 3, 2024</span>
             </div>
             <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
               Joshua Hong y Regina Roldán <span style="color: #0369a1;">triunfan</span> en la Copa Pacífico
@@ -538,9 +550,12 @@
             </svg>
           </div>
           <div style="flex-grow: 1;">
-            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-              <span style="font-size: 9px; color: #ffffff; background: #15803d; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">FMG Official</span>
-              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Tournament Wrap-up</span>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;">
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <span style="font-size: 9px; color: #ffffff; background: #15803d; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">FMG Official</span>
+                <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Tournament Wrap-up</span>
+              </div>
+              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Feb 12, 2024</span>
             </div>
             <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
               <span style="color: #ea580c;">Éxito rotundo</span> en el cierre de la Copa Centro
@@ -562,9 +577,12 @@
             </svg>
           </div>
           <div style="flex-grow: 1;">
-            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-              <span style="font-size: 9px; color: #ffffff; background: #0c2340; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLF.COM.MX</span>
-              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Media Coverage</span>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;">
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <span style="font-size: 9px; color: #ffffff; background: #0c2340; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLF.COM.MX</span>
+                <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Media Coverage</span>
+              </div>
+              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Feb 12, 2024</span>
             </div>
             <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
               Copa Centro: <span style="color: #806600;">Gran nivel de golf</span> de Joshua Hong
@@ -590,9 +608,12 @@
     </div>
     
     <div style="flex-grow: 1;">
-      <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-        <span style="font-size: 9px; color: #ffffff; background: #1b5e20; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLF.COM.MX</span>
-        <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Tournament Victory</span>
+      <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;">
+        <div style="display: flex; align-items: center; gap: 8px;">
+          <span style="font-size: 9px; color: #ffffff; background: #1b5e20; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLF.COM.MX</span>
+          <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Tournament Victory</span>
+        </div>
+        <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Jan 23, 2024</span>
       </div>
       <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
         Joshua Hong <span style="color: #1b5e20;">gana</span> la Copa Sur de la FMG
@@ -615,9 +636,12 @@
             </svg>
           </div>
           <div style="flex-grow: 1;">
-            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-              <span style="font-size: 9px; color: #ffffff; background: #0c2340; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLF.COM.MX</span>
-              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">World Cup Qualifier</span>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;">
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <span style="font-size: 9px; color: #ffffff; background: #0c2340; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLF.COM.MX</span>
+                <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">World Cup Qualifier</span>
+              </div>
+              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Mar 22, 2024</span>
             </div>
             <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
               México varonil <span style="color: #806600;">triunfa en calificación</span> del Toyota Junior Golf World Cup
@@ -638,9 +662,12 @@
             </svg>
           </div>
           <div style="flex-grow: 1;">
-            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-              <span style="font-size: 9px; color: #ffffff; background: #0c2340; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLFSHOT.MX</span>
-              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Tournament Result</span>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;">
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <span style="font-size: 9px; color: #ffffff; background: #0c2340; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLFSHOT.MX</span>
+                <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Tournament Result</span>
+              </div>
+              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Sep 30, 2024</span>
             </div>
             <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
               <span style="color: #806600;">Ganadores</span> de la Copa Centro del Mexico Junior Golf Tour
@@ -660,9 +687,12 @@
             </svg>
           </div>
           <div style="flex-grow: 1;">
-            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-              <span style="font-size: 9px; color: #ffffff; background: #0c2340; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLFSHOT.MX</span>
-              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Champion Spotlight</span>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;">
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <span style="font-size: 9px; color: #ffffff; background: #0c2340; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLFSHOT.MX</span>
+                <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Champion Spotlight</span>
+              </div>
+              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Jan 20, 2025</span>
             </div>
             <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
               Ellos son los <span style="color: #806600;">campeones</span> de la II Copa Sur en Puebla
@@ -682,9 +712,12 @@
             </svg>
           </div>
           <div style="flex-grow: 1;">
-            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-              <span style="font-size: 9px; color: #ffffff; background: #d32f2f; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">Special Award</span>
-              <span style="font-size: 10px; color: #b91c1c; font-weight: 700;">La Crónica de Hoy</span>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;">
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <span style="font-size: 9px; color: #ffffff; background: #d32f2f; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">Special Award</span>
+                <span style="font-size: 10px; color: #b91c1c; font-weight: 700;">AJGA</span>
+              </div>
+              <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Sep 1, 2024</span>
             </div>
             <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
               Billy Dettlaff Sportsmanship Award: <span style="color: #d32f2f;">Honoring Integrity</span>
@@ -695,7 +728,8 @@
           </div>
         </div>
       </a>
-    </div>
+
+   
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 20px;">
       <a href="https://www.google.com/search?q=JOSHUA+HONG+GOLF" target="_blank" style="text-decoration: none;">
