--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -5,7 +5,6 @@
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
 <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -15,6 +14,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>NCAA Stats | Joshua Hong Golf</title>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  // Google Analytics 4 Configuration
+  gtag('config', 'G-H1JW8YBDZ8', {
+    'page_title': 'Joshua Hong Official Site',
+    'send_page_view': true,
+    'cookie_flags': 'SameSite=None;Secure'
+  });
+
+  // Bookmark & Return Visitor Tracking Logic
+  if (window.performance && window.performance.navigation.type === 0) {
+    // Type 0: Direct access (Potential Bookmark or URL entry)
+    gtag('event', 'visitor_entry', {
+      'method': 'direct_or_bookmark',
+      'event_category': 'Engagement',
+      'event_label': 'Direct Access Tracking'
+    });
+  }
+</script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
