--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -507,18 +507,26 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
+           <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-scorecard-70.jpeg')">
+                <span>Scorecard</span>
+                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M15 3h6v6"></path>
+                  <path d="M10 14L21 3"></path>
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                </svg>
+              </div>
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 2, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">75</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">+2</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">T2</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #10b981; font-weight: 700;">IN PROGRESS</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+          <td class="hide-mobile" style="color: #bdc3c7;">75</td>
+          <td class="hide-mobile" style="color: #bdc3c7;">+3</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
+          <td class="hide-mobile" style="color: #bdc3c7;">T2</td>
         </tr>
 
         <tr>
@@ -533,7 +541,7 @@
           </td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #10b981; font-weight: 700;">IN PROGRESS</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
         </tr>
       </tbody>
@@ -564,7 +572,7 @@
 
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
 
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">70</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">145</span>
 
     </div>
 
@@ -572,7 +580,7 @@
 
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Par</span>
 
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">-2</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">+1</span>
 
     </div>
 
@@ -580,7 +588,7 @@
 
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Rank</span>
 
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">1</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">T2</span>
 
     </div>
 
